--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
      -->
     <script src="angular/angular.js"></script>
     <script src="angular-route/angular-route.js"></script>
+    <script src="angular-base64/angular-base64.js"></script>
+    <script src="angular-base64-upload/src/angular-base64-upload.js"></script>
 
 
 <!-- 
